feat: add aws s3 module
